[misc] - add weglot for translations + pass all texts fr => en

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -12,7 +12,13 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round" rel="stylesheet">
-  </head>
+    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+    <script>
+        Weglot.initialize({
+            api_key: 'wg_3c8b0e8505a8d90beed5afaa51e8c40a1'
+        });
+    </script>
+    </head>
   <body class="mat-typography">
     <app-root></app-root>
   </body>
